# roverrobotics_ros2

./: .gitignore  55-roverrobotics.rules  README.md  installation.sh
demo_panel/: CMakeLists.txt  demo_plugin.xml
demo_panel/include/demo_panel/: demo_panel.h  demo_widget.h
demo_panel/src/: demo_widget.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/demo_panel/include/demo_panel/: demo_panel.h  demo_widget.h
install/demo_panel/share/demo_panel/: demo_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/demo_panel/share/demo_panel/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  demo_panelConfig-version.cmake  demo_panelConfig.cmake  demo_panelExport-noconfig.cmake  demo_panelExport.cmake
install/demo_panel/share/demo_panel/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/roverrobotics_description/share/roverrobotics_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/roverrobotics_description/share/roverrobotics_description/cmake/: roverrobotics_descriptionConfig-version.cmake  roverrobotics_descriptionConfig.cmake
install/roverrobotics_description/share/roverrobotics_description/environment/: ament_prefix_path.dsv  path.dsv
install/roverrobotics_description/share/roverrobotics_description/launch/: display_2wd_rover.launch.py  display_4wd_rover.launch.py  display_flipper.launch.py  display_indoor_miti.launch.py  display_mini.launch.py  display_miti.launch.py
install/roverrobotics_description/share/roverrobotics_description/meshes/: castor.dae  castor_housing.dae  flipper.dae  flipper_chassis.dae  flipper_track.dae  hub_10in.dae  hub_6.5in.dae  mini_chassis.dae  miti_chassis.dae  pro_tire.dae  rover_2wd_core.dae  rover_payload.dae  rplidar_s2.dae
install/roverrobotics_description/share/roverrobotics_description/rviz/: urdf.rviz
install/roverrobotics_description/share/roverrobotics_description/urdf/: flipper.urdf  indoor_miti.urdf  mini.urdf  miti.urdf  rover_2wd.urdf  rover_4wd.urdf
install/roverrobotics_driver/lib/roverrobotics_driver/: roverrobotics_driver
install/roverrobotics_driver/share/roverrobotics_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/roverrobotics_driver/share/roverrobotics_driver/cmake/: roverrobotics_driverConfig-version.cmake  roverrobotics_driverConfig.cmake
install/roverrobotics_driver/share/roverrobotics_driver/config/: accessories.yaml  controller_config.yaml  indoor_miti_config.yaml  localization_ekf.yaml  mini_config.yaml  miti_config.yaml  nav2_params.yaml  pro_config.yaml  realsense_config.yaml  topics.yaml  zero_config.yaml
install/roverrobotics_driver/share/roverrobotics_driver/environment/: ament_prefix_path.dsv  path.dsv
install/roverrobotics_driver/share/roverrobotics_driver/launch/: accessories.launch.py  indoor_miti.launch.py  indoor_miti_teleop.launch.py  mini.launch.py  mini_teleop.launch.py  miti.launch.py  miti_teleop.launch.py  nav2_backend.py  navigation_launch.py  pro.launch.py  pro_teleop.launch.py  ps4_controller.launch.py  robot_localizer.launch.py  slam_launch.py  (+2 more)
install/roverrobotics_gazebo/share/roverrobotics_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/roverrobotics_input_manager/lib/roverrobotics_input_manager/: joys_manager.py
install/roverrobotics_input_manager/share/roverrobotics_input_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/switch_control/lib/switch_control/: cmd_vel_muxer
install/switch_control/share/switch_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
roverrobotics_driver/config/: localization_ekf.yaml
roverrobotics_driver/launch/: nav2_backend.py
roverrobotics_driver/maps/: map2.data  map2.pgm
src/: README.md
src/demo_panel/: CMakeLists.txt  package.xml
src/demo_panel/include/demo_panel/: demo_widget.h
src/demo_panel/src/: demo_panel.cpp  demo_widget.cpp
src/roverrobotics_description/urdf/: rover_2wd.urdf
src/roverrobotics_description/urdf/accessories/: camera.urdf  imu.urdf  rplidar_s2.urdf
src/roverrobotics_description/urdf/camera/: _d435.urdf.xacro  _d435i.urdf.xacro  _usb_plug.urdf.xacro
src/roverrobotics_driver/: README.md
src/roverrobotics_driver/config/: accessories.yaml  controller_config.yaml  localization_ekf.yaml  nav2_params.yaml  topics.yaml  zero_config.yaml
src/roverrobotics_driver/config/slam_configs/: mapper_params_localization.yaml
src/roverrobotics_driver/include/: roverrobotics_ros2_driver.hpp
src/roverrobotics_driver/launch/: nav2_backend.py  navigation_launch.py  ps4_controller.launch.py  slam_launch.py  zero.launch.py
src/roverrobotics_driver/maps/: apartment.data  apartment.pgm  apartment.yaml  lab131.pgm  lab131.yaml  lab131_2.pgm  lab131_2.yaml  labs.pgm  labs.yaml  labs_2.pgm  labs_2.yaml  map2.yaml
src/switch_control/: CMakeLists.txt  README.md  package.xml  switch_plugin.xml
src/switch_control/config/: topics.yaml
src/switch_control/include/switch_control/: switch_panel.h  switch_widget.h
src/switch_control/launch/: switch_control_launch.py
src/switch_control/src/: cmd_vel_muxer.cpp  switch_panel.cpp  switch_widget.cpp
switch_control/: CMakeLists.txt
switch_control/launch/: gazebo_nav2_switch_launch.py
switch_control/src/: cmd_vel_muxer.cpp
tests/: boxtest.py  changeParameters.py  imu_odometry.py  navInterface.py  poseNav.py  robot_status.py  robot_status_data.csv  trajectory_points_flat_ellipse-front-left.json
(+53 files in other folders)
