<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_panel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="93095821+talari-bgu@users.noreply.github.com">tal</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_cmake</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>qtbase5-dev</build_depend>
  
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
